; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/freespace/extr_freespace.c_GetRecordedFreeSpace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/freespace/extr_freespace.c_GetRecordedFreeSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetRecordedFreeSpace(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @fsm_get_location(i32 %10, i32* %7)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @fsm_readbuf(i32 %12, i32 %13, i32 0)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @BufferIsValid(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %28

19:                                               ; preds = %2
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @BufferGetPage(i32 %20)
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @fsm_get_avail(i32 %21, i32 %22)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @ReleaseBuffer(i32 %24)
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @fsm_space_cat_to_avail(i32 %26)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %19, %18
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @fsm_get_location(i32, i32*) #1

declare dso_local i32 @fsm_readbuf(i32, i32, i32) #1

declare dso_local i32 @BufferIsValid(i32) #1

declare dso_local i32 @fsm_get_avail(i32, i32) #1

declare dso_local i32 @BufferGetPage(i32) #1

declare dso_local i32 @ReleaseBuffer(i32) #1

declare dso_local i32 @fsm_space_cat_to_avail(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
